[package]
name = "architect"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
code-context = { path = "modules/code-context" }
sql-context = { path = "modules/sql-context" }
